--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,8 @@
 	padding: 20px;
   font-size: 40px;
 	text-align: center;
-	background-color: #111441;
 	color: rgb(226, 156, 25);
-  background-image: url('media\sea-edge-79ab30e2.png');
+  background-image: url('../media/sea-edge-79ab30e2.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
@@ -20,6 +19,8 @@
 .navbar {
   overflow: hidden;
   background-color: #000408;
+
+ 
 }
 
 
@@ -29,10 +30,11 @@
   display: block;
   color: rgb(255, 255, 255);
   text-align: center;
-  padding: 24px 30px;
+  padding: 20px;
   text-decoration: none;
   font-weight: bold;
   font-size: 20px;
+  cursor: pointer;
 }
 
 /*Style for placement of the search bar*/
@@ -46,12 +48,7 @@
   color: rgb(143, 50, 127);
 }
 
-/*Style for the search bar*/
-.navbar input[type=text] {
-	text-align: center;
-	font-size: 16px;
-	border-radius: 5px;
-}
+
 
 /*Style for the search button*/
 .navbar .search button {
@@ -69,7 +66,7 @@
 .act1{
   padding: 70px;
   font-size: 20px;
-  text-align: right;
+  text-align: center;
   background-color: #10035a;
   color: rgb(0, 255, 255);
  
@@ -77,17 +74,16 @@
 .act2{
   padding: 100px;
 font-size: 20px;
-  text-align: right;
+  text-align: left;
   background-color: #10035a;
-  color: rgb(0, 255, 255);
-background-image: url('E:\ppw (2)\ppw\media\key-fob.jpg');
-background-repeat: no-repeat;
-background-attachment: scroll;
-background-size: 30% 100%;
-
-
-
+  color: rgb(255, 255, 255);
 }
+
+.fright{
+  float:right;
+}
+
+
 
 
 /*Style for the header*/
@@ -144,9 +140,14 @@ hr{
 
 /*Style for all h2's*/
 h2{
-	color: #00ffff;
+	color: #ffffff;
 	padding: 20px;
-  text-align: right;
+  text-align: left;
+}
+h3{
+	color: #ffffff;
+	padding: 20px;
+  text-align: left;
 }
 
 /*Style for paragraphs*/
@@ -155,33 +156,7 @@ p{
 }
 
 
-/*              Style for Login Button & Page               */
 
-
-/* Full-width input fields */
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-/* Set a style for all buttons */
-button {
-  background-color: #064584;
-  color: rgb(255, 255, 255);
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-button:hover {
-  opacity: 0.8;
-}
 
 /* Extra styles for the cancel button */
 .cancelbtn {
@@ -211,28 +186,10 @@ span.psw {
   padding-top: 16px;
 }
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  padding-top: 60px;
-}
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #5900ff;
-  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-  border: 1px solid #888;
-  width: 40%; /* Could be more or less, depending on screen size */
-}
+
+
+
 
 /* The Close Button (x) */
 .close {
@@ -250,29 +207,7 @@ span.psw {
   cursor: pointer;
 }
 
-/* Add Zoom Animation */
-.animate {
-  -webkit-animation: animatezoom 0.6s;
-  animation: animatezoom 0.6s
-}
 
-@-webkit-keyframes animatezoom {
-  from {-webkit-transform: scale(0)} 
-  to {-webkit-transform: scale(1)}
-}
-  
-@keyframes animatezoom {
-  from {transform: scale(0)} 
-  to {transform: scale(1)}
-}
 
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-     display: block;
-     float: none;
-  }
-  .cancelbtn {
-     width: 100%;
-  }
-}
+
+
