--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,9 @@
   cursor: pointer;
   border-radius: 5px;
 }
+body{
+  margin: 0;
+}
 .act1{
   padding: 70px;
   font-size: 20px;
@@ -88,7 +91,7 @@ font-size: 20px;
 
 /*Style for the header*/
 .footer{
-	padding: 10px;
+	padding: 0px;
 	text-align: center;
 	background-color: #10035a;
 	color: white;
@@ -98,18 +101,17 @@ font-size: 20px;
 
 /*Style to try center the table*/
 .table {
-	padding-left: 20px;
+	text-align: center;
 }
 
-/*Style for the table headers*/
-.table th{
-	padding-top: 10px;
-	padding-bottom: 10x;
-	text-align: center;
-	background-color: #06ffff;
-	color: rgb(189, 0, 0);
-	border: 1px solid rgb(194, 22, 180);
-  	padding: 8px;
+
+
+table, th, td {
+  border: 5px solid white;
+  border-collapse: collapse;
+}
+th, td {
+  background-color: #000000;
 }
 
 /*Style for the main body*/
@@ -128,7 +130,7 @@ body{
 
 /*Style for paragraphs in the Header*/
 .header #headerp {
-	padding: none;
+	padding: 0px;
 }
 
 /*Style for horizontal breaks*/
@@ -158,54 +160,13 @@ p{
 
 
 
-/* Extra styles for the cancel button */
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-}
-
-/* Center the image and position the close button */
-.imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
-  position: relative;
-}
-
-img.avatar {
-  width: 20%;
-  height: 20%;
-}
-
-.container {
-  padding: 8px;
-}
-
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
 
 
 
 
 
 
-/* The Close Button (x) */
-.close {
-  position: absolute;
-  right: 25px;
-  top: 0;
-  color: #000;
-  font-size: 35px;
-  font-weight: bold;
-}
 
-.close:hover,
-.close:focus {
-  color: red;
-  cursor: pointer;
-}
 
 
 
