--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,9 @@ body{
 .act1{
   padding: 70px;
   font-size: 20px;
-  text-align: center;
+  text-align: left;
   background-color: #10035a;
-  color: rgb(0, 255, 255);
+  color: rgb(255, 255, 255);
  
 }
 .act2{
@@ -118,7 +118,7 @@ th, td {
 body{
 	padding: 0;
 	margin: 0;
-  text-align: center;
+  text-align: left;
 
 }
 
